# otus-cxx

./: LICENSE  README.md  doxygen.yaml
.github/workflows/: doxygen.yaml  main.yml  task-01.yaml  task-02.yaml  task-03.yaml  task-04.yaml  task-06.yaml
task-01/: CMakeLists.txt  test_version.cpp  version.h.in
task-01/cxx/: CMakeLists.txt  lib.cpp  lib.h  main.cpp  test_version.cpp
task-02/: .gitignore  ip_filter.check.sh  ip_filter.md5.txt  prototype.check.sh
task-02/cxx/: CMakeLists.txt  main.cxx
task-02/py/: prototype.md5.txt  prototype.py
task-03/: workflow.yaml
task-03/cxx/: CMakeLists.txt  main.cpp
task-03/cxx/allocator/: mem-pool.hpp
task-03/cxx/tool/: CMakeLists.txt  factorial.hpp  logger.hpp
task-04/: CMakeLists_8txt.html  annotated.html  classes.html  dir_000001_000002.html  dir_6bd1286642fbf4cd1b9e2b6455c08d20.html  dir_915b3de7074c83fdaee0acf164ba0681.html  dir_915b3de7074c83fdaee0acf164ba0681_dep.map  dir_915b3de7074c83fdaee0acf164ba0681_dep.md5  dir_af39443e335b76b5e7f1d587e3d5e555.html  dir_af39443e335b76b5e7f1d587e3d5e555_dep.map  dir_af39443e335b76b5e7f1d587e3d5e555_dep.md5  doxyfile  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  index.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  menudata.js  namespacemembers.html  namespacemembers_func.html  namespacemembers_vars.html  namespaceprinter.html  namespaces.html  print-ip_8hpp.html  print-ip_8hpp__dep__incl.map  print-ip_8hpp__dep__incl.md5  print-ip_8hpp__incl.map  print-ip_8hpp__incl.md5  print-ip_8hpp_source.html  printer_2CMakeLists_8txt.html  structprinter_1_1is__container-members.html  structprinter_1_1is__container.html  structprinter_1_1is__container_3_01std_1_1list_3_01T_01_4_01_4-members.html  structprinter_1_1is__container_3_01std_1_1list_3_01T_01_4_01_4.html  structprinter_1_1is__container_3_01std_1_1vector_3_01T_01_4_01_4-members.html  (+12 more)
task-04/cxx/: CMakeLists.txt  main.cpp
task-04/cxx/printer/: CMakeLists.txt  print-ip.hpp  type-helper.hpp
task-04/doc/task-04/: index.html
task-04/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  classes_0.js  files_0.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  namespaces_0.js  searchdata.js  variables_0.js  variables_1.js
task-06/: workflow.yaml
task-06/cxx/: CMakeLists.txt  main.cpp
task-06/cxx/tensor-impl/: iface.hpp  scalar.hpp  store.hpp  tensor.hpp  vector.hpp
task-06/design/: design.drawio
task-08/cxx/: CMakeLists.txt
task-08/cxx/cli/: CMakeLists.txt  main.cpp
task-08/cxx/core/: CMakeLists.txt  lib-stub.cpp
task-08/cxx/core/inc/: types.hpp
task-08/cxx/core/inc/data-hasher/: boost-data-hasher.hpp  data-hasher-iface.hpp
task-08/cxx/core/inc/dup-detector/: dup-detector-iface.hpp  dup-detector-impl.hpp
task-08/cxx/core/inc/item-reader/: item-reader-iface.hpp  local-file-reader.hpp  stub-item-reader.hpp
task-08/cxx/core/src/data-hasher/: boost-data-hasher.cpp
task-08/cxx/core/src/dup-detector/: dup-detector-impl.cpp
task-08/cxx/core/src/item-reader/: local-file-reader.cpp  stub-item-reader.cpp
task-08/cxx/tests/: CMakeLists.txt  main.cpp
task-08/cxx/tests/dup-detector/: dup-detector-impl.cpp
task-08/cxx/tests/item-reader/: stub-item-reader.cpp
task-1/: CMakeLists.txt  main.cpp
task-13/cxx/: CMakeLists.txt  main.cpp
task-13/cxx/inc/priv/: logistic-regression.hpp  tools.hpp  types.hpp
task-13/cxx/inc/pub/: tools.hpp  tools.inl  types.hpp
task-13/cxx/inc/pub/classifier/: classifier.hpp  logistic-regression.hpp
task-13/cxx/src/: logistic-regression.cpp
task-13/cxx/src/impl/: logistic-regression.cpp  tools.cpp
